# Lafz

./: .env.example  .gitignore  README.md  instrumentation.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/: analytics-demo.html  import-demo.html  launch.json  queue-demo.html  settings-demo.html  song-grid-demo.html  track-demo.html
.next/: app-build-manifest.json  prerender-manifest.json  trace
data/: settings.json
desktop/: app.js  index.html  styles.css
docs/: tauri-consumer-plan.md  vocabulary-worker.md
public/: navbar-demo.html
scripts/: audit-brain.mjs  backfill-brain-embeddings.mjs  backfill-brain-learning.mjs  backfill-brain.mjs  backfill-published-translation-art.mjs  backfill-r2.mjs  backfill-supabase.mjs  backfill-usage.mjs  benchmark-ai-surface-polish.mjs  benchmark-brain-critic.mjs  benchmark-brain.mjs  build-desktop-dmg.mjs  enqueue-vocabulary-backlog.mjs  publish-desktop-update.mjs  reconcile-brain.mjs  reconcile-entity-graph.mjs  reconcile-motif-graph.mjs  run-brain-worker-daemon.mjs  run-cleanup-worker-daemon.mjs  run-desktop-build.mjs  run-desktop-dev.mjs  run-entity-worker-daemon.mjs  run-motif-worker-daemon.mjs  run-persona-worker-daemon.mjs  run-vocabulary-agent.mjs  run-vocabulary-worker-daemon.mjs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop-consumer.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_media.rs  desktop_update.rs  main.rs  windows_media.rs
supabase/: lafz_agent_jobs.sql  lafz_brain_learning.sql  lafz_brain_phase1.sql  lafz_brain_phase2a.sql  (+5 more)
(+354 files in other folders)
