[package]
name = "lafz-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.10.1"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Foundation", "Media_Control"] }
